--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <head>
 </head>
 <body>
+  <div id = "container">
+    <h1>Welcome to Hangman!</h1>
+    <div id = "word"></div>
+  </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script type="text/javascript" src="script.js"></script>
 </body>
