Add minor html updates on game

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <div id = "container">
     <h1>Welcome to Hangman!</h1>
     <div id = "word"></div>
+    <h1>Description:</h1>
+    <div id = "description"></div>
+    <h1>Lives</h1>
+    <div id = "lives"></div>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script type="text/javascript" src="script.js"></script>
