--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <div id = "description"></div>
     <h1>Lives</h1>
     <div id = "lives"></div>
+    <div id = "letters">
+    </div>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script type="text/javascript" src="script.js"></script>
