--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <div id = "container">
     <h1>Welcome to Hangman!</h1>
     <div id = "word"></div>
-    <h1>Description:</h1>
+    <h3 id="guessedLetters">Incorrect Letters: </h3>
     <div id = "description"></div>
-    <h1>Lives</h1>
+    <h2>Lives</h2>
     <div id = "lives"></div>
     <div id = "letters">
     </div>
